packages/dartcv/src/gapi/gapi.h

typedef VecPrim Prims;
void gapi_GMat_Close(GMatPtr mat);
void gapi_GScalar_Close(GScalarPtr scalar);
void gapi_GComputation_Close(GComputationPtr self);
void VecPrim_Close(VecPrimPtr vec);
CvStatus *gapi_sqrt(GMat src, GMat *rval);
CvStatus *gapi_sub(GMat src1, GMat src2, int ddepth, GMat *rval);
CvStatus *gapi_subC(GMat src, GScalar c, int ddepth, GMat *rval);
CvStatus *gapi_subRC(GScalar c, GMat src, int ddepth, GMat *rval);
CvStatus *gapi_sepFilter(const GMat src, int ddepth, const Mat kernelX, const Mat kernelY, const CvPoint anchor,
                         const Scalar delta, int borderType, const Scalar borderValue, GMat *rval);
CvStatus *gapi_resizeP(const GMat src, const CvSize dsize, int interpolation, GMat *rval);
CvStatus *gapi_split3(const GMat src, GMat *rval, GMat *rval1, GMat *rval2);
CvStatus *gapi_split4(const GMat src, GMat *rval, GMat *rval1, GMat *rval2, GMat *rval3);
CvStatus *gapi_warpAffine(const GMat src, const Mat M, const CvSize dsize, int flags, int borderMode,
                          const Scalar borderValue, GMat *rval);
CvStatus *gapi_warpPerspective(const GMat src, const Mat M, const CvSize dsize, int flags, int borderMode,
                               const Scalar borderValue, GMat *rval);