packages/dartcv/lib/src/g/gapi.g.dart


  late final _gapi_resizePPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, CvSize, ffi.Int, ffi.Pointer<GMat>)>>('gapi_resizeP');
  late final _gapi_resizeP = _gapi_resizePPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, CvSize, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_sepFilter(
    GMat src,
    int ddepth,
    Mat kernelX,
    Mat kernelY,
    CvPoint anchor,
    Scalar delta,
    int borderType,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_sepFilter(
      src,
      ddepth,
      kernelX,
      kernelY,
      anchor,
      delta,
      borderType,
      borderValue,
      rval,
    );
  }

  late final _gapi_sepFilterPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Int, Mat, Mat, CvPoint,
              Scalar, ffi.Int, Scalar, ffi.Pointer<GMat>)>>('gapi_sepFilter');
  late final _gapi_sepFilter = _gapi_sepFilterPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, int, Mat, Mat, CvPoint, Scalar, int,
          Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_split3(
    GMat src,
    ffi.Pointer<GMat> rval,
    ffi.Pointer<GMat> rval1,
    ffi.Pointer<GMat> rval2,
  ) {
    return _gapi_split3(
      src,
      rval,
      rval1,
      rval2,
    );
  }

  late final _gapi_split3Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>,
              ffi.Pointer<GMat>, ffi.Pointer<GMat>)>>('gapi_split3');
  late final _gapi_split3 = _gapi_split3Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, ffi.Pointer<GMat>, ffi.Pointer<GMat>, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_split4(
    GMat src,
    ffi.Pointer<GMat> rval,
    ffi.Pointer<GMat> rval1,
    ffi.Pointer<GMat> rval2,
    ffi.Pointer<GMat> rval3,
  ) {
    return _gapi_split4(
      src,
      rval,
      rval1,
      rval2,
      rval3,
    );
  }

  late final _gapi_split4Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat,
              ffi.Pointer<GMat>,
              ffi.Pointer<GMat>,
              ffi.Pointer<GMat>,
              ffi.Pointer<GMat>)>>('gapi_split4');
  late final _gapi_split4 = _gapi_split4Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>, ffi.Pointer<GMat>,
          ffi.Pointer<GMat>, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_sqrt(
    GMat src,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_sqrt(
      src,
      rval,
    );
  }

  late final _gapi_sqrtPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, ffi.Pointer<GMat>)>>('gapi_sqrt');
  late final _gapi_sqrt = _gapi_sqrtPtr
      .asFunction<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_sub(
    GMat src1,
    GMat src2,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_sub(
      src1,
      src2,
      ddepth,
      rval,
    );
  }

  late final _gapi_subPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GMat, ffi.Int, ffi.Pointer<GMat>)>>('gapi_sub');
  late final _gapi_sub = _gapi_subPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GMat, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_subC(
    GMat src,
    GScalar c,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_subC(
      src,
      c,
      ddepth,
      rval,
    );
  }

  late final _gapi_subCPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GMat, GScalar, ffi.Int, ffi.Pointer<GMat>)>>('gapi_subC');
  late final _gapi_subC = _gapi_subCPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GMat, GScalar, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_subRC(
    GScalar c,
    GMat src,
    int ddepth,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_subRC(
      c,
      src,
      ddepth,
      rval,
    );
  }

  late final _gapi_subRCPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              GScalar, GMat, ffi.Int, ffi.Pointer<GMat>)>>('gapi_subRC');
  late final _gapi_subRC = _gapi_subRCPtr.asFunction<
      ffi.Pointer<CvStatus> Function(GScalar, GMat, int, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_warpAffine(
    GMat src,
    Mat M,
    CvSize dsize,
    int flags,
    int borderMode,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_warpAffine(
      src,
      M,
      dsize,
      flags,
      borderMode,
      borderValue,
      rval,
    );
  }

  late final _gapi_warpAffinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, Mat, CvSize, ffi.Int, ffi.Int,
              Scalar, ffi.Pointer<GMat>)>>('gapi_warpAffine');
  late final _gapi_warpAffine = _gapi_warpAffinePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, Mat, CvSize, int, int, Scalar, ffi.Pointer<GMat>)>();

  ffi.Pointer<CvStatus> gapi_warpPerspective(
    GMat src,
    Mat M,
    CvSize dsize,
    int flags,
    int borderMode,
    Scalar borderValue,
    ffi.Pointer<GMat> rval,
  ) {
    return _gapi_warpPerspective(
      src,
      M,
      dsize,
      flags,
      borderMode,
      borderValue,
      rval,
    );
  }

  late final _gapi_warpPerspectivePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(GMat, Mat, CvSize, ffi.Int, ffi.Int,
              Scalar, ffi.Pointer<GMat>)>>('gapi_warpPerspective');
  late final _gapi_warpPerspective = _gapi_warpPerspectivePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          GMat, Mat, CvSize, int, int, Scalar, ffi.Pointer<GMat>)>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final CvNativeGapi _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(VecPrimPtr)>>
      get VecPrim_Close => _library._VecPrim_ClosePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(GComputationPtr)>>
      get gapi_GComputation_Close => _library._gapi_GComputation_ClosePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(GMatPtr)>>
      get gapi_GMat_Close => _library._gapi_GMat_ClosePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(GScalarPtr)>>
      get gapi_GScalar_Close => _library._gapi_GScalar_ClosePtr;
}

typedef CvPoint = imp$1.CvPoint;
typedef CvRect = imp$1.CvRect;
typedef CvSize = imp$1.CvSize;
typedef CvStatus = imp$1.CvStatus;

final class GArrayGArrayPoint extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayGArrayPointPtr = ffi.Pointer<GArrayGArrayPoint>;

final class GArrayPoint extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

final class GArrayPoint2d extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint2dPtr = ffi.Pointer<GArrayPoint2d>;

final class GArrayPoint2f extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint2fPtr = ffi.Pointer<GArrayPoint2f>;

final class GArrayPoint2i extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint2iPtr = ffi.Pointer<GArrayPoint2i>;

final class GArrayPoint3d extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint3dPtr = ffi.Pointer<GArrayPoint3d>;

final class GArrayPoint3f extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint3fPtr = ffi.Pointer<GArrayPoint3f>;

final class GArrayPoint3i extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPoint3iPtr = ffi.Pointer<GArrayPoint3i>;
typedef GArrayPointPtr = ffi.Pointer<GArrayPoint>;

final class GArrayPrim extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayPrimPtr = ffi.Pointer<GArrayPrim>;

final class GArrayVec4i extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GArrayVec4iPtr = ffi.Pointer<GArrayVec4i>;

final class GComputation extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GComputationPtr = ffi.Pointer<GComputation>;

final class GFrame extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GFramePtr = ffi.Pointer<GFrame>;

final class GMat extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GMatPtr = ffi.Pointer<GMat>;

final class GOpaquePoint extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GOpaquePointPtr = ffi.Pointer<GOpaquePoint>;

final class GOpaqueRect extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GOpaqueRectPtr = ffi.Pointer<GOpaqueRect>;

final class GOpaqueVec4f extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GOpaqueVec4fPtr = ffi.Pointer<GOpaqueVec4f>;

final class GOpaqueVec6f extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GOpaqueVec6fPtr = ffi.Pointer<GOpaqueVec6f>;

final class GScalar extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef GScalarPtr = ffi.Pointer<GScalar>;
typedef Mat = imp$1.Mat;

final class Prim extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef PrimPtr = ffi.Pointer<Prim>;
typedef Prims = VecPrim;
typedef Scalar = imp$1.Scalar;

final class VecGMat extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef VecGMatPtr = ffi.Pointer<VecGMat>;
typedef VecPoint = imp$1.VecPoint;

final class VecPrim extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef VecPrimPtr = ffi.Pointer<VecPrim>;
typedef VecVec4i = imp$1.VecVec4i;
typedef VecVecPoint = imp$1.VecVecPoint;
